feat: add fight command routing and hybrid local ownership cache
Agent-Logs-Url: https://github.com/Fight-Club-Online/Fight-Service/sessions/501deae2-9c8b-4bd6-a8b3-328645fda840

Co-authored-by: SantiagoSu15 <181153854+SantiagoSu15@users.noreply.github.com>